add new endpoints